<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/questionnaire_screen" >
    tools:context=".Questionnaire">
    <TextView
        android:id="@+id/q_instruction"
        android:layout_width="200dp"
        android:layout_height="52dp"
        android:layout_marginTop="92dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/text1"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.591"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.339" />


    <CheckBox
        android:id="@+id/rb_Science"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.13"
        android:checked="false"
        android:text="@string/Science"
        android:textSize="20sp"
        android:typeface="serif"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rb_HistoryAndCultureOfTheCity" />

    <CheckBox
        android:id="@+id/rb_Literature"
        android:layout_width="150dp"
        android:layout_height="55dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.13"
        android:checked="false"
        android:text="@string/Literature"
        android:textSize="20sp"
        android:typeface="serif"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rb_Art" />

    <CheckBox
        android:id="@+id/rb_Art"
        android:layout_width="150dp"
        android:layout_height="55dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="52dp"
        android:layout_weight="0.13"
        android:checked="false"
        android:text="@string/Art"
        android:textSize="20sp"
        android:typeface="serif"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/q_instruction" />

    <CheckBox
        android:id="@+id/rb_HistoryAndCultureOfTheCity"
        android:layout_width="150dp"
        android:layout_height="55dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.13"
        android:checked="false"
        android:text="@string/History"
        android:textSize="20sp"
        android:typeface="serif"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rb_Literature" />

    <Button
        android:id="@+id/btn_confirm"
        android:layout_width="191dp"
        android:layout_height="34dp"
        android:background="@drawable/buttoncontinue"
        app:layout_constraintBottom_toBottomOf="@+id/rb_HistoryAndCultureOfTheCity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.595"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>