<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="top"
    android:orientation="vertical"
    android:padding="30dp"
    android:background="#FFE2BB"
    tools:context=".Questionnaire">
    <TextView
        android:id="@+id/q_instruction"
        android:layout_width="200dp"
        android:layout_height="52dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="92dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/text1"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="313dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/q_instruction"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:weightSum="1"
        app:layout_constraintBottom_toTopOf="@+id/btn_confirm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/q_instruction">

        <RadioButton
            android:id="@+id/rb_Science"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.13"
            android:checked="false"
            android:text="@string/Science"
            android:textSize="20sp"
            android:typeface="serif" />

        <RadioButton
            android:id="@+id/rb_Literature"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.13"
            android:checked="false"
            android:text="@string/Literature"
            android:textSize="20sp"
            android:typeface="serif" />

        <RadioButton
            android:id="@+id/rb_Art"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.13"
            android:checked="false"
            android:text="@string/Art"
            android:textSize="20sp"
            android:typeface="serif" />

        <RadioButton
            android:id="@+id/rb_HistoryAndCultureOfTheCity"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.13"
            android:checked="false"
            android:text="@string/HistoryAndCultureOfTheCity"
            android:textSize="20sp"
            android:typeface="serif" />
    </RadioGroup>

    <Button
        android:id="@+id/btn_confirm"
        android:layout_width="214dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="188dp"
        android:background="@drawable/buttoncontinue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.344"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/q_instruction"
        app:layout_constraintVertical_bias="0.875" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="638dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.611"
        app:srcCompat="@drawable/pic2" />

    <Button
        android:id="@+id/tester"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_confirm" />
</androidx.constraintlayout.widget.ConstraintLayout>